deployments/mysql-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: mysql
  labels:
    app: mysql
    version: v1

spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql

      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim

        # - name: mysql-init-script
        #   configMap:
        #     name: mysql-init-script

---

apiVersion: v1
kind: Service
metadata:
  name: mysql  # DNS name
  namespace: mysql
  labels:
    app: mysql
    version: v1
    
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:       # mysql Pod Should contain same labels
    app: mysql
    
  clusterIP: None  # We Use DNS, Thus ClusterIP is not relevant
