deployments/node-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
  
  
spec:
  selector:
    matchLabels:
      app: node-app
  replicas: 2
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: node-app
        image: developer9844/express:4.0
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
      
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: node-app-svc
spec:
  selector:
    app: node-app
  ports:
  - port: 7000
    targetPort: 8080
  type: NodePort
