deployments/ingress-node.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-ingress
spec:
  rules:
  - host: my-expressnode.com
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 8080
